# tumo

./: README.md  RPS.md
agents/: 01_agent_strawberry.py  02_agent_birthday.py  03_agent_zim.py  03b_agent_zim.py  04_agent_joplin.py  05_agent_webpage.py  06_agent_searxng.py  07_otari.py  README.md  birthdays.csv  pyproject.toml  zim_utils.py
agents/docs/: pi_llamafile_agent.md
agents/docs/assets/: pi_trace.jsonl
rps/: .gitignore  README.md  SETUP.md  YOLO.md  config.py  detect_live.py  evaluate.py  export.py  game_logic.py  play.py  prepare_dataset.py  pyproject.toml  train.py  workshop.ipynb
rps/dataset/: data.yaml
rps/dataset/test/: labels.cache
rps/dataset/train/: labels.cache
rps/dataset/valid/: labels.cache
rps/runs/detect/rps_train/: args.yaml  results.csv
rps/runs/detect/rps_train/weights/best_ncnn_model/: metadata.yaml  model.ncnn.param  model_ncnn.py
sdprov/: .gitignore  README.md  config.example.toml  sdprov.py
