# ---------------------------------------------------------------------------
# uv project definition for the Rock-Paper-Scissors YOLO11 teaching project.
#
# `uv` manages BOTH the Python interpreter and the libraries for us:
#   - the interpreter version is pinned in the `.python-version` file (3.11),
#     chosen so the SAME interpreter runs on the Mac and the Pi. On the Pi this
#     matches the system Python that the apt `python3-picamera2` package is built
#     for, so the venv can reuse it via --system-site-packages (see README).
#   - the libraries are listed below under `dependencies`.
#
# Common commands:
#   uv sync                 -> create the virtual env and install everything
#   uv run train.py ...     -> run a script inside that env (no manual activate)
# ---------------------------------------------------------------------------
[project]
name = "rock-paper-scissors-yolo"
version = "0.1.0"
description = "Train, evaluate and play Rock-Paper-Scissors with a YOLO11 model on a Raspberry Pi 5."
readme = "README.md"

# Pin to Python 3.11 (matches .python-version) on BOTH platforms. On the Pi this is
# the system interpreter the apt picamera2/libcamera bindings are built for; on the
# Mac uv fetches a managed 3.11. Identical interpreters => the same wheels resolve
# everywhere and the code behaves the same on both machines. (All deps ship cp311
# wheels for macOS-arm64 and linux-aarch64, and the code uses no 3.12-only features.)
requires-python = ">=3.11,<3.12"

dependencies = [
    # Ultralytics is the official YOLO11 package. Installing it also pulls in its
    # heavy friends automatically: torch (the deep-learning engine), torchvision,
    # opencv-python (camera + image display), numpy, pyyaml, matplotlib, etc.
    "ultralytics>=8.3.0",
    # NCNN is the lightweight inference engine we export to for the Raspberry Pi.
    # `export.py` needs these two packages to perform the PyTorch -> NCNN conversion:
    #   ncnn -> the runtime,   pnnx -> the PyTorch-to-NCNN converter tool.
    "ncnn>=1.0.20240410",
    "pnnx>=20240819",
    # torch / torchvision are pulled in by ultralytics anyway, but we list them
    # explicitly here so the [tool.uv.sources] override below actually applies:
    # uv only honours `sources` for DIRECT dependencies, not transitive ones.
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    # picamera2 (inherited from the system via --system-site-packages on the Pi) pulls
    # in the compiled `simplejpeg` module. The apt copy is built against NumPy 1.x, but
    # torch needs NumPy 2.x — incompatible ABIs in one interpreter. We install a
    # NumPy-2.x simplejpeg wheel here (Linux only) so it shadows the system one and the
    # whole camera+ML stack stays consistent on NumPy 2.x.
    "simplejpeg>=1.8 ; sys_platform == 'linux'",
]

# NOTE on the Raspberry Pi camera:
#   The Pi camera is driven by `picamera2`, which depends on the COMPILED
#   `libcamera`/`pykms` Python bindings. Those are not on PyPI — they ship via apt
#   (`python3-picamera2`, pre-installed on Raspberry Pi OS) and are built for the
#   system Python 3.11. We deliberately do NOT list picamera2 here. Instead, on the
#   Pi the venv is created on the system 3.11 interpreter WITH --system-site-packages,
#   so it transparently reuses the apt picamera2 + libcamera (no compiling, exact
#   hardware match). On the Mac there is no Pi camera, so play.py falls back to the
#   OpenCV webcam backend and none of this applies. See README.md for Pi setup.

# ---------------------------------------------------------------------------
# CPU-only PyTorch on the Raspberry Pi (Linux / aarch64).
#
# Since PyTorch ~2.4 the default Linux aarch64 wheels on PyPI BUNDLE the NVIDIA
# CUDA libraries (nvidia-cuda-*, nvidia-cudnn-*, ... — several GB), because the
# same wheel also targets NVIDIA's ARM boards (Jetson, Grace-Hopper). The Pi 5
# is aarch64 too, so a plain `uv sync` downloads all that CUDA baggage even
# though there is no NVIDIA GPU to use it.
#
# The block below pulls torch/torchvision from PyTorch's CPU-only wheel index,
# but ONLY on Linux (the Pi). On macOS the marker excludes it, so the Mac keeps
# the normal wheel with Apple-Silicon (MPS) GPU support for training. One config
# serves both machines; `uv lock` resolves the right set per platform.
# ---------------------------------------------------------------------------
[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true   # only used for packages that explicitly reference it below

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu", marker = "sys_platform == 'linux'" },
]
torchvision = [
    { index = "pytorch-cpu", marker = "sys_platform == 'linux'" },
]
