# ---------------------------------------------------------------------------
# uv project definition for the Rock-Paper-Scissors YOLO11 teaching project.
#
# `uv` manages BOTH the Python interpreter and the libraries for us:
#   - the interpreter version is pinned in the `.python-version` file (3.13) as the
#     default (used on the Mac and current Raspberry Pi OS). On the Pi the venv is built
#     on the *system* Python — whatever the apt `python3-picamera2` is built for (3.13 on
#     Trixie, 3.11 on older Bookworm) — via --system-site-packages (see README). The
#     `requires-python` below allows 3.11–3.13 to cover both.
#   - the libraries are listed below under `dependencies`.
#
# Common commands:
#   uv sync                 -> create the virtual env and install everything
#   uv run train.py ...     -> run a script inside that env (no manual activate)
# ---------------------------------------------------------------------------
[project]
name = "rock-paper-scissors-yolo"
version = "0.1.0"
description = "Train, evaluate and play Rock-Paper-Scissors with a YOLO11 model on a Raspberry Pi 5."
readme = "README.md"

# Supported Python: 3.11–3.13. `.python-version` pins 3.13 as the DEFAULT (what uv
# installs on the Mac, and what current Raspberry Pi OS / Debian Trixie ships). We allow
# down to 3.11 so an older Bookworm Pi (system Python 3.11) works too — on the Pi the
# venv is built on the *system* interpreter (see README), so it matches whatever that Pi
# ships and can reuse the apt picamera2 built for it. All deps provide wheels across this
# range for macOS-arm64 and linux-aarch64, and the code uses no version-specific features.
requires-python = ">=3.11,<3.14"

dependencies = [
    # Ultralytics is the official YOLO11 package. Installing it also pulls in its
    # heavy friends automatically: torch (the deep-learning engine), torchvision,
    # opencv-python (camera + image display), numpy, pyyaml, matplotlib, etc.
    "ultralytics>=8.3.0",
    # NCNN is the lightweight inference engine we export to for the Raspberry Pi.
    # `export.py` needs these two packages to perform the PyTorch -> NCNN conversion:
    #   ncnn -> the runtime,   pnnx -> the PyTorch-to-NCNN converter tool.
    "ncnn>=1.0.20240410",
    "pnnx>=20240819",
    # torch / torchvision are pulled in by ultralytics anyway, but we list them
    # explicitly here so the [tool.uv.sources] override below actually applies:
    # uv only honours `sources` for DIRECT dependencies, not transitive ones.
    #
    # On the Mac: normal PyPI wheels (flexible version, includes MPS support).
    "torch>=2.0.0 ; sys_platform != 'linux'",
    "torchvision>=0.15.0 ; sys_platform != 'linux'",
    # On the Pi (Linux): pin the exact "+cpu" CPU-index builds. The CPU index also
    # ships a Windows-ARM64 build tagged "+df56172" whose PEP 440 local version sorts
    # ABOVE "+cpu", so an UNPINNED resolve picks 0.27.1+df56172 — which has no Linux
    # wheel and makes uv sync fail. Pinning "+cpu" forces the correct build.
    "torch==2.12.1+cpu ; sys_platform == 'linux'",
    "torchvision==0.27.1+cpu ; sys_platform == 'linux'",
    # picamera2 (inherited from the system via --system-site-packages on the Pi) pulls
    # in the compiled `simplejpeg` module, which is built against the SYSTEM NumPy. On
    # older Raspberry Pi OS (Bookworm) that is NumPy 1.x, which clashes with the NumPy
    # 2.x that torch needs — incompatible ABIs in one interpreter. We install a NumPy-2.x
    # simplejpeg wheel here (Linux only) so it shadows the system one and the whole
    # camera+ML stack stays on NumPy 2.x. (On current Raspberry Pi OS / Trixie the system
    # is already NumPy 2.x, so this is harmless belt-and-suspenders.)
    "simplejpeg>=1.8 ; sys_platform == 'linux'",
]

# NOTE on the Raspberry Pi camera:
#   The Pi camera is driven by `picamera2`, which depends on the COMPILED
#   `libcamera`/`pykms` Python bindings. Those are not on PyPI — they ship via apt
#   (`python3-picamera2`, pre-installed on Raspberry Pi OS) and are built for the
#   system Python (3.13 on current Raspberry Pi OS). We deliberately do NOT list
#   picamera2 here. Instead, on the Pi the venv is created on that system interpreter
#   WITH --system-site-packages, so it transparently reuses the apt picamera2 +
#   libcamera (no compiling, exact hardware match). On the Mac there is no Pi camera,
#   so play.py falls back to the OpenCV webcam backend and none of this applies.
#   See README.md for Pi setup.

# ---------------------------------------------------------------------------
# CPU-only PyTorch on the Raspberry Pi (Linux / aarch64).
#
# Since PyTorch ~2.4 the default Linux aarch64 wheels on PyPI BUNDLE the NVIDIA
# CUDA libraries (nvidia-cuda-*, nvidia-cudnn-*, ... — several GB), because the
# same wheel also targets NVIDIA's ARM boards (Jetson, Grace-Hopper). The Pi 5
# is aarch64 too, so a plain `uv sync` downloads all that CUDA baggage even
# though there is no NVIDIA GPU to use it.
#
# The block below pulls torch/torchvision from PyTorch's CPU-only wheel index,
# but ONLY on Linux (the Pi). On macOS the marker excludes it, so the Mac keeps
# the normal wheel with Apple-Silicon (MPS) GPU support for training. One config
# serves both machines; `uv lock` resolves the right set per platform.
# ---------------------------------------------------------------------------
[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true   # only used for packages that explicitly reference it below

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu", marker = "sys_platform == 'linux'" },
]
torchvision = [
    { index = "pytorch-cpu", marker = "sys_platform == 'linux'" },
]
